--- a/example/android/app/src/main/AndroidManifest.xml
+++ b/example/android/app/src/main/AndroidManifest.xml
@@ -6,6 +6,8 @@
          In most cases you can leave this as-is, but you if you want to provide
          additional functionality it is fine to subclass or reimplement
          FlutterApplication and put your custom class here. -->
+
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
     <application
         android:name="io.flutter.app.FlutterApplication"
         android:label="foreground_notification_example"
@@ -29,5 +31,7 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
+
+        <service android:name="flutter.moum.foreground_notification.ForegroundNotificationService" />
     </application>
 </manifest>
